added css custom options according to #90

--- a/css/fontsampler-css.less
+++ b/css/fontsampler-css.less
@@ -282,12 +282,12 @@
         }
 
         .fontsampler-ui-block-invert {
-            button[data-value="positive"] img {
-                background: #fff;
-            }
-            button[data-value="negative"] img {
-                background: #333;
-            }
+            //button[data-value="positive"] img {
+            //    background: #fff;
+            //}
+            //button[data-value="negative"] img {
+            //    background: #333;
+            //}
         }
     }
 }
