--- a/css/fontsampler-custom-selectric.less
+++ b/css/fontsampler-custom-selectric.less
@@ -48,6 +48,7 @@
   color: @labelColor;
   height: @innerHeight;
   border-bottom: 1px solid #333;
+  padding-left: 0.5em;
   box-sizing: border-box;
 }
 .selectric .button {
