--- a/css/fontsampler-interface.less
+++ b/css/fontsampler-interface.less
@@ -4,10 +4,12 @@
 @css_color_label: #333;
 @css_value_size_label: inherit;
 @css_value_fontfamily_label: inherit;
+@css_value_lineheight_label: normal;
 @css_color_highlight: #efefef;
 @css_color_highlight_hover: #dedede;
 @css_color_line: #333333;
 @css_color_handle: #333333;
+@css_color_button_background: #efefef;
 @css_value_column_gutter: 10px;
 @css_value_row_height: 30px;
 @css_value_row_gutter: 10px;
@@ -49,7 +51,8 @@
 }
 
 /* css_color_highlight_hover */
-.fontsampler-interface .selectric-items li:hover {
+.fontsampler-interface .selectric-items li:hover,
+.fontsampler-interface .selectric-items li.selected {
     background: @css_color_highlight_hover;
 }
 
@@ -63,6 +66,10 @@
 .fontsampler-interface .fontsampler-ui-block-buy a,
 .fontsampler-interface .fontsampler-ui-block-specimen a {
     border-bottom: 1px solid @css_color_line;
+}
+
+.fontsampler-interface .rangeslider {
+    background: @css_color_line;
 }
 
 .fontsampler-interface .fontsampler-opentype-features {
@@ -85,4 +92,22 @@
 
 .fontsampler-interface .fontsampler-interface-link-text {
     height: @css_value_row_height;
+}
+
+/* button backgrounds */
+.fontsampler-interface .fontsampler-ui-block .fontsampler-multiselect > button,
+.fontsampler-interface .selectric > .label,
+.fontsampler-interface .selectric > .button {
+    background: @css_color_button_background;
+}
+
+/* label line-height */
+.fontsampler-interface label.fontsampler-slider .slider-label,
+.fontsampler-interface label.fontsampler-slider .slider-value,
+.fontsampler-interface .fontsampler-font-label label {
+    line-height: @css_value_lineheight_label;
+}
+
+.fontsampler-interface .selectric > .label {
+    line-height: @css_value_lineheight_label !important;
 }
