--- a/css/fontsampler-interface.less
+++ b/css/fontsampler-interface.less
@@ -111,3 +111,14 @@
 .fontsampler-interface .selectric > .label {
     line-height: @css_value_lineheight_label !important;
 }
+
+/* button icon colors */
+.fontsampler-interface .icon-align-left,
+.fontsampler-interface .icon-align-center,
+.fontsampler-interface .icon-align-right,
+.fontsampler-interface .icon-opentype,
+.fontsampler-interface .icon-invert-black,
+.fontsampler-interface .icon-invert-white,
+.fontsampler-interface .selectric > .button {
+    color: @css_color_label;
+}
