--- a/includes/partials/options-row.twig
+++ b/includes/partials/options-row.twig
@@ -1,4 +1,4 @@
-<div class="fontsampler-options-row">
+<div class="fontsampler-options-row fontsampler-options-row-{{ label }}">
     <strong>
         {% block label %}{% endblock %}
     </strong>
