--- a/css/fontsampler-css.less
+++ b/css/fontsampler-css.less
@@ -70,6 +70,7 @@
 
             &.fontsampler-ui-block-fontsampler {
                 height: auto;
+                width: 100%;
             }
         }
 
