--- a/css/fontsampler-interface.less
+++ b/css/fontsampler-interface.less
@@ -19,8 +19,8 @@
     color: @css_color_text;
 }
 
-.fontsampler-interface .type-tester__content.invert {
-    background: @css_color_text;
+.fontsampler-wrapper .fontsampler-interface .type-tester__content.invert {
+    color: @css_color_background;
 }
 
 /* css_color_background */
@@ -28,8 +28,8 @@
     background: @css_color_background;
 }
 
-.fontsampler-interface .type-tester__content.invert {
-    color: @css_color_background;
+.fontsampler-wrapper .fontsampler-interface .type-tester__content.invert {
+    background: @css_color_text;
 }
 
 /* css_color_label */
