--- a/includes/partials/options-features-link.twig
+++ b/includes/partials/options-features-link.twig
@@ -31,7 +31,7 @@
                     {% if type == 'label' and label is empty %} checked="checked" {% endif %}>
                 <span class="settings-description">Use default label for "{{ name }}" link:</span><br>
                 <span class="fontsampler-default-value">{{ default_label }}</span>
-                <input type="hidden" name="{{ name }}_label" class="fontsampler-admin-slider-label"
+                <input type="hidden" name="{{ name }}_label_default" class="fontsampler-admin-slider-label"
                        value="{{ default_label }}"/>
             </label>
         {% else %}
