--- a/includes/partials/styles-css-field.twig
+++ b/includes/partials/styles-css-field.twig
@@ -6,7 +6,7 @@
         {% if not settings %}
             <label class="fontsampler-radio">
                 <input type="radio" name="{{ name }}_use_default" value="0"
-                    {% if value is not empty %} checked="checked" {% endif %}>
+                    {% if value is not empty and set_uses_defaults == 0 %} checked="checked" {% endif %}>
                 <span class="settings-description">Use custom value</span>
             </label>
         {% endif %}
@@ -20,7 +20,7 @@
     {% if not settings %}
         <label class="fontsampler-radio">
             <input type="radio" name="{{ name }}_use_default" value="1"
-                    {% if value is empty %} checked="checked" {% endif %}>
+                    {% if value is empty or set_uses_defaults == 1  %} checked="checked" {% endif %}>
             <span class="settings-description">Use default: <span class="fontsampler-default-value">{{ default }}</span></span>
         </label>
     {% endif %}
