--- a/includes/partials/options-features-slider.twig
+++ b/includes/partials/options-features-slider.twig
@@ -26,7 +26,7 @@
     {% if not settings %}
         <label class="fontsampler-radio">
             <input type="radio" name="{{ label }}_use_default" value="1"
-                    {% if use_default %} checked="checked" {% endif %}>
+                    {% if use_default or set_uses_defaults == 1 %} checked="checked" {% endif %}>
             <span class="settings-description">Use Default: <span class="fontsampler-default-value">{{ slider_default }}</span></span>
         </label>
     {% endif %}
