implements #105 - refactored fontsampler list to show only rendered font, as well as settings option info

--- a/admin/css/fontsampler-admin.css
+++ b/admin/css/fontsampler-admin.css
@@ -1182,3 +1182,6 @@
 #fontsampler-admin fieldset.fontsampler-fix-default-settings .submit {
   margin: 0;
 }
+#fontsampler-admin .fontsampler-list-font-link {
+  cursor: pointer;
+}
