implemented #107 post-update changelog page

--- a/admin/css/admin-header.less
+++ b/admin/css/admin-header.less
@@ -45,6 +45,11 @@
                         border-bottom: 0;
                         color: #fff;
                     }
+
+                    &.latest-changes {
+                        background: @fs_color_delete_light !important;
+                        color: @fs_color_white !important;
+                    }
                 }
 
                 &.current {
