--- a/includes/about.twig
+++ b/includes/about.twig
@@ -26,6 +26,11 @@
         <li><a href="https://drawcard.com.au/">Chris Drabsch</a></li>
     </ul>
 
+    <h2>Changelog</h2>
+    <p>You can view the changes in the last update <a href="admin.php?page=fontsampler&subpage=changelog">here</a>.</p>
+    <p>For a full changelog of past versions, please consult the official page in the
+    <a href="https://wordpress.org/plugins/fontsampler/#developers">Wordpress plugin directory</a>.</p>
+
     <h2>License information</h2>
 
     <p>This code is distributed under the GNU General Public License v3.0.</p>
