--- a/admin/css/fontsampler-admin.css
+++ b/admin/css/fontsampler-admin.css
@@ -765,6 +765,10 @@
   border-bottom: 0;
   color: #fff;
 }
+#fontsampler-admin #fontsampler-menu ul li a.latest-changes {
+  background: #E5604E !important;
+  color: #FFFFFF !important;
+}
 #fontsampler-admin #fontsampler-menu ul li.current a {
   background: #008EC2;
   border-bottom: 0;
