--- a/admin/css/fontsampler-admin.less
+++ b/admin/css/fontsampler-admin.less
@@ -128,7 +128,18 @@
 
     p {
         font-size: inherit;
-        max-width: 40em;
+        max-width: 60em;
+    }
+
+    aside {
+        font-size: smaller;
+        font-weight: normal;
+        color: #AAA;
+        max-width: 60em;
+    }
+
+    .text-box {
+        max-width: 60em;
     }
 
     h1, h2, h3, h4, h5, h6 {
