--- a/includes/changelog.twig
+++ b/includes/changelog.twig
@@ -2,11 +2,26 @@
 
 {% block content %}
 <h1>Thanks for updating Fontsampler!</h1>
-    <h2>Here is what changed with this latest release:</h2>
-    <ul class="real-list">
-        <li>wefoij</li>
-        <li>wefoijoij</li>
-    </ul>
+    <h2>Here is what changed with this latest release (0.3.0):</h2>
+    <div class="text-box">
+        <div class="notice error">
+            <strong>IMPORTANT CHANGE:</strong> Font names in Fontsamplers will be shown as stored in the admin area, instead of being extracted from the PostScript names in the files themselves. Make sure your font names are as desired for diplaying on your public facing site.
+        </div>
+        <ul class="real-list">
+            <li>Added a "What's new" tab that is shown after an updated, informing users of recent changes</li>
+            <li>Changed the default behaviour regarding font names. Font names in Fontsamplers will be shown as stored in the admin area, instead of being extracted from the PostScript names in the files themselves</li>
+            <li>Adding a new font file in the admin area will automatically extract the PostScript font name from the file, but let's users store any arbitrary font name when creating the font set</li>
+            <li>Adding a new font file in the admin area will immediately render a preview of the font</li>
+            <li>Added PHP version check to avoid users running PHP versions lower than 5.6 trying to run Fontsampler</li>
+            <li>Fixed permissions check and creation of custom css files for storing Fontsampler custom css settings</li>
+            <li>Added the notifications highlight number also to the Fontsampler sidebar menu to attract attention to potential issues when browsing anywhere in the admin area</li>
+            <li>Changed the display of Fontsamplers in the admin area: The font name is directly rendered in the font, additionally there is a flag showing if a Fontsampler uses custom or default options</li>
+            <li>Updated Opentype.js dependency to fix a Safari specific bug that would fail to detect several different distinct styles of one font family</li>
+            <li>Fixed an issue with the uninstall script that would prevent Fontsampler from being fully uninstalled in some circumstances</li>
+            <li>Temporarily removed Woff2 until the Opentype.js implementation is fully working; any already uploaded and stored woff2 files will still be there once this feature is ready for prime time in an upcoming release</li>
+            <li>Fontsampler is now officially brought to you as an Open Source initiative of Underscore Type - same developer, different name ;)</li>
+        </ul>
+    </div>
     <h2>Feedback, questions, bugs?</h2>
     <p>In case you have feedback on this plugin or update, found any bugs
         or encounter any questions, feel free to ask
@@ -17,21 +32,27 @@
         and <a href="http://fontsampler.johannesneumeier.com/">official website</a> -
         maybe there already is an answer to your question.
     </p>
+    <h2>Get featured</h2>
+    <p>Using Fontsampler on your Wordpress site? Please be <a href="mailto:hello@johannesneumeier.com">in touch</a>
+        if you want your website featured on an upcoming "in-use" section on the
+        <a href="http://fontsampler.johannesneumeier.com">official plugin website</a>. Your site can be featured with
+        screenshots, links to your fonts and foundry site.
+    </p>
     <br>
     <form method="post" action="?page=fontsampler">
         <input type="hidden" name="action" value="hide_changelog">
         {{ wp_nonce_field( 'fontsampler-action-hide_changelog' )|raw }}
-        <input type="submit" class="button button-primary" value="Ok, got it"><br><br>
-        <small>And hide this tab until the next update</small>
+        <input type="submit" class="button button-primary" value="Ok, got it!"><br><br>
+        <small>(And hide this tab until the next update)</small>
     </form>
     <br>
-    <p>
+    <aside>
         If for some reason you need a previous version of Fontsampler, you can
         download those as zip files from
         <a href="https://wordpress.org/plugins/fontsampler/advanced/">the Wordpress plugin registry</a>
         and manually install them on your server. However, it is highly recommended to keep
         the plugin up-to-date.
-    </p>
+    </aside>
 
 
 {% endblock %}
