fixed some UI preview styling issues

--- a/admin/css/admin-options.less
+++ b/admin/css/admin-options.less
@@ -225,21 +225,21 @@
     .slider {
         margin: 0.5em 0;
     }
-    .rangeslider--horizontal {
-        background: @fs_color_ok_light;
-        height: 4px;
-        width: 100%;
-        clear: both;
-
-        .rangeslider__fill {
-            background: @fs_color_ok;
-        }
-
-        .rangeslider__handle {
-            height: 12px;
-            width: 12px;
-        }
-    }
+    //.rangeslider--horizontal {
+    //    background: @fs_color_ok_light;
+    //    height: 4px;
+    //    width: 100%;
+    //    clear: both;
+    //
+    //    .rangeslider__fill {
+    //        background: @fs_color_ok;
+    //    }
+    //
+    //    .rangeslider__handle {
+    //        height: 12px;
+    //        width: 12px;
+    //    }
+    //}
 
     // the wrapper element for inline uploads, like for the buy and specimen link images
     .fontsampler-setting-image {
