--- a/admin/css/admin-preview.less
+++ b/admin/css/admin-preview.less
@@ -21,6 +21,10 @@
             border: 4px solid @fs_color_light;
             padding: 10px;
 
+            label {
+                margin: 0;
+            }
+
             // sortable preview fontsamplers
             .fontsampler-interface {
                 position: relative;
