--- a/includes/partials/preview.twig
+++ b/includes/partials/preview.twig
@@ -1,7 +1,7 @@
 <h2>Interface layout</h2>
 {% if settings is not empty %}
 <p>Note that this layout is used for Fontsamplers with default features and will vary if a Fontsampler
-uses customized features or layout.</p>
+uses customized features or layout. Changes to styling only become active in the preview after saving.</p>
 {% endif %}
 
 <div id="fontsampler-admin-ui-wrapper">
