changelog and version bump to 0.3.6

--- a/includes/about.twig
+++ b/includes/about.twig
@@ -20,6 +20,7 @@
         <li><strong><a href="http://quadrat.com">David Vereschagin</a></strong></li>
         <li><a href="http://setsailstudios.com/">Sam Parrett</a></li>
         <li><a href="http://www.phitradesign-fonts.com/">Philip Trautmann</a></li>
+        <li><a href="https://brandingwithtype.com/typefaces/modelica">Alberto Romanos</a></li>
     </ul>
     <p>For code contributions to the repository my thanks to:</p>
     <ul class="real-list">
