added npm watch tasks

--- a/css/fontsampler-css.less
+++ b/css/fontsampler-css.less
@@ -1,6 +1,6 @@
-@import "fontsampler-icons.css";
+@import (less) "fontsampler-icons.css"; 
 @import "fontsampler-custom-selectric.less";
-@import "fontsampler-custom-rangeslider.less";
+@import "fontsampler-custom-rangeslider.less"; 
 
 .fontsampler-warning {
     background: #C0402F;
