--- a/css/fontsampler-custom-selectric.less
+++ b/css/fontsampler-custom-selectric.less
@@ -34,10 +34,11 @@
 .selectric {
   border: @borderWidth solid @secondaryColor;
   background: @baseColor;
-  position: relative;
+  position: relative; 
   border-radius: @borderRadius;
 }
 .selectric .label {
+  border-radius: 0;
   display: block;
   white-space: nowrap;
   overflow: hidden;
