small rtl fixes for frontend

--- a/css/fontsampler-css.less
+++ b/css/fontsampler-css.less
@@ -159,6 +159,8 @@
                 position: absolute;
                 right: 5px;
                 top: 0;
+                text-align: right;
+                direction: ltr !important; // these also ltr for rtl languages
             }
         }
 
